--- a/analyses/describe_cases/cleanepi-linelist-incidence2-stratified.qmd
+++ b/analyses/describe_cases/cleanepi-linelist-incidence2-stratified.qmd
@@ -1,5 +1,5 @@
 ---
-title: "How to plot age-stratified incidence data by month from date of birth?"
+title: "Plot age-stratified incidence data by month from date of birth"
 format: 
   html:
     code-link: true
@@ -9,6 +9,9 @@ editor_options:
 date: last-modified
 toc: true
 toc_float: true
+author: 
+  - name: "Andree Valle-Campos"
+    orcid: "0000-0002-7779-481X"
 ---
 
 ```{r, include = FALSE}
@@ -18,11 +21,10 @@ knitr::opts_chunk$set(
 )
 ```
 
-## Ingredients
+## What do we have?
 
-- The `{cleanepi}` package to calculate age in years from date of birth. 
-- The `{linelist}` package to keep tagged and validated columns in a line list data set.
-- The `{incidence2}` package to generate aggregated incidence data by months.
+- Messy linelist data
+- Date of birth
 
 ## Steps in code
 
@@ -136,7 +138,9 @@ dat_incidence %>%
 
 <!-- reduce length of strings with a large language model like chatgpt -->
 
-- pending
+- The `{cleanepi}` package to calculate age in years from date of birth. 
+- The `{linelist}` package to keep tagged and validated columns in a line list data set.
+- The `{incidence2}` package to generate aggregated incidence data by months.
 - An alternative to `base::cut()` can also be `Hmisc::cut2(x = age_in_years,cuts = c(20,35,60))`.
 
 <!-- must: keep to warn users on how to install packages -->
