--- a/analyses/estimate_severity/cfr-stratified-severity.qmd
+++ b/analyses/estimate_severity/cfr-stratified-severity.qmd
@@ -1,5 +1,5 @@
 ---
-title: "How to estimate a delay-adjusted age-stratified case fatality risk?"
+title: "Estimate a delay-adjusted age-stratified case fatality risk"
 format: 
   html:
     code-link: true
@@ -9,6 +9,9 @@ editor_options:
 date: last-modified
 toc: true
 toc_float: true
+author: 
+  - name: "Andree Valle-Campos"
+    orcid: "0000-0002-7779-481X"
 ---
 
 ```{r, include = FALSE}
@@ -18,13 +21,10 @@ knitr::opts_chunk$set(
 )
 ```
 
-## Ingredients
+## What do we have?
 
 - Simulated outbreak data of Ebola Virus Disease that matches some key properties of the West African Ebola outbreak of 2014-2015 from the package `{outbreaks}`
-- The `{linelist}` package to keep tagged and validated columns in a line list data set.
-- The `{incidence2}` package to generate aggregated incidence data with the daily number of reported cases and deaths.
-- The functions `tidyr::nest()` and `purrr::map()` to stratify estimates.
-- The `{cfr}` package to estimate delay-adjusted case fatality risk.
+- Delay from onset to death stored in `{epiparameter}`
 
 ## Steps in code
 
@@ -139,7 +139,11 @@ dat_incidence %>%
 
 ## Steps in detail
 
-- pending
+- The `{linelist}` package to keep tagged and validated columns in a line list data set.
+- The `{incidence2}` package to generate aggregated incidence data with the daily number of reported cases and deaths.
+- The functions `tidyr::nest()` and `purrr::map()` to stratify estimates.
+- The `{cfr}` package to estimate delay-adjusted case fatality risk.
+
 
 <!-- OPTIONAL -->
 
