--- a/analyses/quantify_transmission/reproduction_number_effective_finalsize.qmd
+++ b/analyses/quantify_transmission/reproduction_number_effective_finalsize.qmd
@@ -1,5 +1,5 @@
 ---
-title: "How to estimate the effective reproductive number (R~eff~) with heterogeneity in social contact?"
+title: "Estimate the effective reproductive number (R~eff~) with heterogeneity in social contact"
 format: 
   html:
     code-link: true
@@ -9,6 +9,9 @@ editor_options:
 date: last-modified
 toc: true
 toc_float: true
+author: 
+  - name: "Andree Valle-Campos"
+    orcid: "0000-0002-7779-481X"
 ---
 
 ```{r, include = FALSE}
@@ -18,10 +21,11 @@ knitr::opts_chunk$set(
 )
 ```
 
-## Ingredients
+## What do we have?
 
-- Account for heterogeneous social contact
-- Assume homogeneous susceptibility in all age groups
+- Social contact survey and demography data of Country in the [POLYMOD](https://journals.plos.org/plosmedicine/article?id=10.1371/journal.pmed.0050074) study or [Social contact data](https://zenodo.org/communities/social_contact_data/records) repository.
+- Heterogeneous social contact
+
 
 ## Steps in code
 
@@ -98,7 +102,7 @@ r_eff(
 
 ## Steps in detail
 
-- (pending)
+- This assumes homogeneous susceptibility in all age groups
 
 ## Related
 
