--- a/analyses/quantify_transmission/reproduction_number_timevarying_epinow2.qmd
+++ b/analyses/quantify_transmission/reproduction_number_timevarying_epinow2.qmd
@@ -1,5 +1,5 @@
 ---
-title: "How to quantify the time-varying reproduction number (R~t~)?"
+title: "Quantify the time-varying reproduction number (R~t~)"
 format: 
   html:
     code-link: true
@@ -9,6 +9,9 @@ editor_options:
 date: last-modified
 toc: true
 toc_float: true
+author: 
+  - name: "Andree Valle-Campos"
+    orcid: "0000-0002-7779-481X"
 ---
 
 ```{r, include = FALSE}
@@ -18,14 +21,12 @@ knitr::opts_chunk$set(
 )
 ```
 
-## Ingredients
+## What do we have?
 
 - Simulated outbreak data of Ebola Virus Disease that matches some key properties of the West African Ebola outbreak of 2014-2015 from the package `{outbreaks}`.
-- The `{linelist}` package to keep tagged and validated columns in a line list data set.
-- The `{incidence2}` package to generate aggregated incidence data with the daily number of reported cases.
-- The `{epiparameter}` package to access to the serial interval estimated by the WHO Ebola Response Team in 2015.
-- Assume that the serial interval distribution approximates the generation time.
-- The `{EpiNow2}` package to estimate the time-varying reproduction number.
+- Serial interval stored in `{epiparameter}`
+- Incubation period stored in `{epiparameter}`
+
 
 ## Steps in code
 
@@ -152,7 +153,12 @@ plot(estimates)
 
 ## Steps in detail
 
-- pending
+- The `{linelist}` package to keep tagged and validated columns in a line list data set.
+- The `{incidence2}` package to generate aggregated incidence data with the daily number of reported cases.
+- The `{epiparameter}` package to access to the serial interval estimated by the WHO Ebola Response Team in 2015.
+- Assume that the serial interval distribution approximates the generation time.
+- The `{EpiNow2}` package to estimate the time-varying reproduction number.
+
 <!-- - The `outbreaks` package is loaded to access the simulated Ebola outbreak data. -->
 <!-- - The `epiparameter` package is loaded to access the library of epidemiological parameters. -->
 
