--- a/analyses/simulate_transmission/epichains-outbreak-size.qmd
+++ b/analyses/simulate_transmission/epichains-outbreak-size.qmd
@@ -9,6 +9,9 @@ editor_options:
 date: last-modified
 toc: true
 toc_float: true
+author: 
+  - name: "Joshua W. Lambert"
+    orcid: "0000-0001-5218-3046"
 ---
 
 ```{r, include = FALSE}
