--- a/analyses/simulate_transmission/finalsize-attack-rate-heterogeneity.qmd
+++ b/analyses/simulate_transmission/finalsize-attack-rate-heterogeneity.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Simulate Epidemic Attack Rates with Heterogeneous Social Contacts in the UK"
+title: "Simulate Epidemic Attack Rates with Heterogeneous Social Contacts"
 format: 
   html:
     code-link: true
@@ -9,6 +9,9 @@ editor_options:
 date: last-modified
 toc: true
 toc_float: true
+author: 
+  - name: "Adam Kucharski"
+    orcid: "0000-0001-8814-9421"
 ---
 
 ```{r, include = FALSE}
