--- a/analyses/simulate_transmission/finalsize_heterogenious_between_within.qmd
+++ b/analyses/simulate_transmission/finalsize_heterogenious_between_within.qmd
@@ -1,5 +1,5 @@
 ---
-title: "How to simulate the final size with heterogeneity in social contact and infection susceptibility?"
+title: "Simulate the final size with heterogeneity in social contact and infection susceptibility"
 format: 
   html:
     code-link: true
@@ -9,6 +9,9 @@ editor_options:
 date: last-modified
 toc: true
 toc_float: true
+author: 
+  - name: "Andree Valle-Campos"
+    orcid: "0000-0002-7779-481X"
 ---
 
 ```{r, include = FALSE}
@@ -18,9 +21,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-## Ingredients
-
-This scenario assumes that, in the population, there is: 
+## What do we have?
 
 - Heterogeneous social contact
 - Different susceptibility to the infection:
