--- a/analyses/simulate_transmission/finalsize_susceptibility_matrices.qmd
+++ b/analyses/simulate_transmission/finalsize_susceptibility_matrices.qmd
@@ -1,5 +1,5 @@
 ---
-title: "How to create heterogeneous susceptibility matrices?"
+title: "Create heterogeneous susceptibility matrices"
 format: 
   html:
     code-link: true
@@ -9,6 +9,9 @@ editor_options:
 date: last-modified
 toc: true
 toc_float: true
+author: 
+  - name: "Andree Valle-Campos"
+    orcid: "0000-0002-7779-481X"
 ---
 
 ```{r, include = FALSE}
@@ -18,12 +21,9 @@ knitr::opts_chunk$set(
 )
 ```
 
-## Ingredients
+## What do we have?
 
-Conditions:
-
-- Create the two susceptibility matrices needed for the `finalsize` package.
-- The population is divided into five age groups: 0 – 4, 5 – 17, 18 – 39, 40 – 64, and 65 and over.
+- A population is divided into five age groups: 0 – 4, 5 – 17, 18 – 39, 40 – 64, and 65 and over.
 - An immunization campaign generated within age group variation in susceptibility.
 - The immunization effect for all age groups is 25%.
 - The infection susceptibility between age group differs in the following way:
@@ -90,6 +90,7 @@ p_susceptibility
 - The `p_susceptibility` object is a matrix that contains the proportion or probability that individuals in a demographic group are also in a specific susceptibility group. Each row-column element in the matrix represents the proportion of each demographic group (rows) that falls into the susceptibility group (columns). Consequently, each of its rows must always sum to 1.0.
 - The `tribble()` function creates a tibble with a row-by-row layout. The "age_group" column contains all age groups, and the "unimmunized" column proportion of the unimmunized population in all age groups equals 0.6.
 - The `mutate()` function creates the "immunized" column by getting the complement proportion of the unimmunized".
+- The two susceptibility matrices can be used as input for the `finalsize` package.
 
 Please note that the code assumes the necessary packages are already installed. If they are not, you can install them using first the `install.packages("pak")` function and then the `pak::pak()` function for both packages in CRAN or GitHub before loading them with `library()`. 
 
