--- a/analyses/simulate_transmission/superspreading-probability-extintion.qmd
+++ b/analyses/simulate_transmission/superspreading-probability-extintion.qmd
@@ -9,6 +9,9 @@ editor_options:
 date: last-modified
 toc: true
 toc_float: true
+author: 
+  - name: "Joshua W. Lambert"
+    orcid: "0000-0001-5218-3046"
 ---
 
 ```{r, include = FALSE}
@@ -18,7 +21,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-## Ingredients
+## What do we have?
 
 - Line list and contact data.
 
