--- a/internal/template-package_action.qmd
+++ b/internal/template-package_action.qmd
@@ -1,5 +1,5 @@
 ---
-title: "How to (active verb) ... ?"
+title: "(Active verb) ... (problem to solve)"
 format: 
   html:
     code-link: true
@@ -9,6 +9,9 @@ editor_options:
 date: last-modified
 toc: true
 toc_float: true
+author: 
+  - name: "Your Name"
+    orcid: "0000-0000-0000-XXXX"
 ---
 
 ```{r, include = FALSE}
@@ -18,7 +21,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-## Ingredients
+## What d owe have?
 
 - Nouns
 
